--- a/Material.Infra/Material.Infra.csproj
+++ b/Material.Infra/Material.Infra.csproj
@@ -45,11 +45,8 @@
     <Reference Include="System.Data" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Migrations\201610162047375_v1.cs" />
-    <Compile Include="Migrations\201610162047375_v1.Designer.cs">
-      <DependentUpon>201610162047375_v1.cs</DependentUpon>
-    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
+    <Compile Include="Persistencia\Initializer.cs" />
     <Compile Include="Persistencia\MaterialContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositorios\Cadastros\ProdutoRepositorio.cs" />
@@ -57,11 +54,6 @@
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Migrations\201610162047375_v1.resx">
-      <DependentUpon>201610162047375_v1.cs</DependentUpon>
-    </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Material.Dominio\Material.Dominio.csproj">
