--- a/Material.Produtos.API/packages.config
+++ b/Material.Produtos.API/packages.config
@@ -15,5 +15,6 @@
   <package id="Microsoft.Owin.Host.SystemWeb" version="3.0.1" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net461" />
   <package id="Owin" version="1.0" targetFramework="net461" />
+  <package id="Strathweb.CacheOutput.WebApi2" version="0.10.0" targetFramework="net461" />
   <package id="Unity" version="4.0.1" targetFramework="net461" />
 </packages>
