--- a/Material.Dominio/Material.Dominio.csproj
+++ b/Material.Dominio/Material.Dominio.csproj
@@ -36,6 +36,7 @@
     <Reference Include="System.Data" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Cadastros\Entidades\Categoria.cs" />
     <Compile Include="Cadastros\Entidades\Produto.cs" />
     <Compile Include="Cadastros\Repositorios\IProdutoRepositorio.cs" />
     <Compile Include="Cadastros\Servicos\IProdutoService.cs" />
