--- a/Material.Produtos.API/Web.config
+++ b/Material.Produtos.API/Web.config
@@ -15,6 +15,9 @@
     <compilation debug="true" targetFramework="4.6.1" />
     <httpRuntime targetFramework="4.6.1" />
   </system.web>
+  <connectionStrings>
+    <add name="materialConnectionsString" connectionString="Data Source=(localdb)\v11.0;Database=MaterialDb;Integrated Security=True" providerName="System.Data.SqlClient" />
+  </connectionStrings>
   <appSettings>
     <add key="urloauth" value="http://localhost:49399//api/v1/validatetoken" />
   </appSettings>
